<resources>
    <string name="app_name">Dota Tracker</string>
    <string name="networkError">Sorry, network problems encountered</string>
    <string name="list_tournaments">LIST TOURNAMENTS</string>
    <string name="list_matches">LIST UPCOMING MATCHES</string>
    <string name="title_activity_tournament_info">MainActivity</string>
    <string name="title_tourneyInfo">Info</string>
    <string name="title_standings">Standings</string>
    <string name="title_matches">Matches</string>
    <string name="title_teams">Teams</string>
    <string name="prize_pool_label">Prize pool:</string>
    <string name="organizer_label">Organizer:</string>
    <string name="location_label">Location:</string>
    <string name="number_of_teams_label"># of teams:</string>
    <string name="venue_location_title">Venue Location</string>
    <string name="team_logo">Team Logo</string>
    <string name="player1">Player1</string>
    <string name="team_1_logo_desc">Team 1 Logo</string>
    <string name="player">Player</string>
    <string name="hero">Hero</string>
    <string name="kills_label">K</string>
    <string name="deaths_label">D</string>
    <string name="assists_label">A</string>
    <string name="team_2_logo_desc">Team 2 Logo</string>
    <string name="toolbar_title">DotaApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_link">No account yet? Register</string>
    <string name="action_logout">Logout</string>
    <string name="saved_tournaments">Saved tournaments</string>
    <string name="saved_matches">Saved matches</string>
</resources>
